--- a/Pacs/Assembly-CSharp.csproj
+++ b/Pacs/Assembly-CSharp.csproj
@@ -51,12 +51,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Blinky_movements.cs" />
      <Compile Include="Assets\Scripts\Buttons_Behaviour.cs" />
      <Compile Include="Assets\Scripts\Editeur\MappingEditor (1).cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Ghost_movements.cs" />
      <Compile Include="Assets\Scripts\Grid_character.cs" />
+     <Compile Include="Assets\Scripts\IA_Fantomes\Blinky_movements.cs" />
+     <Compile Include="Assets\Scripts\IA_Fantomes\Clyde_movements.cs" />
+     <Compile Include="Assets\Scripts\IA_Fantomes\Inky_movements.cs" />
+     <Compile Include="Assets\Scripts\IA_Fantomes\Pinky_movements.cs" />
      <Compile Include="Assets\Scripts\MovePacman.cs" />
      <Compile Include="Assets\Scripts\Pacman_collisions.cs" />
      <Compile Include="Assets\Scripts\Pacman_movements.cs" />
