--- a/Pacs/Assembly-CSharp.csproj
+++ b/Pacs/Assembly-CSharp.csproj
@@ -51,10 +51,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\nextMusic.cs" />
      <Compile Include="Assets\Scripts\AudioManager.cs" />
-     <Compile Include="Assets\Scripts\Editeur\MappingEditor (1).cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Grid_character.cs" />
+     <Compile Include="Assets\Scripts\MappingEditor (1).cs" />
      <Compile Include="Assets\Scripts\Movements\Blinky_movements.cs" />
      <Compile Include="Assets\Scripts\Movements\Clyde_movements.cs" />
      <Compile Include="Assets\Scripts\Movements\Ghost_movements.cs" />
@@ -63,6 +64,7 @@
      <Compile Include="Assets\Scripts\Movements\Pinky_movements.cs" />
      <Compile Include="Assets\Scripts\MovePacman.cs" />
      <Compile Include="Assets\Scripts\Pacman_collisions.cs" />
+     <Compile Include="Assets\Scripts\Sound.cs" />
      <Compile Include="Assets\Scripts\TileMapTest.cs" />
      <Compile Include="Assets\Scripts\UI\Buttons_Behaviour.cs" />
  <Reference Include="UnityEngine.UI">
